apps/test-app-backend/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app
  labels:
    policy-enforced: "true"
    ghcr-pull-secret: enabled
    goldilocks.fairwinds.com/enabled: "true"
